VZDEV/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>CCPM_campaignJourneyMessage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SMS Journey Message Lookup</description>
        <inlineHelpText>SMS Journey Message Lookup</inlineHelpText>
        <label>Campaign Journey Message</label>
        <referenceTo>CCPM_journeyMessage__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPM_campaignkey__c</fullName>
        <externalId>true</externalId>
        <label>Campaign key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_collateralID__c</fullName>
        <label>Collateral ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_collateralNm__c</fullName>
        <label>Collateral Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_communicationId__c</fullName>
        <label>Communication ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_eventEndDate__c</fullName>
        <inlineHelpText>This field is the text value of the field &apos;Event End&apos;. Please enter the date in &quot;YYYY-MM-DD HH:MM:SS&quot; format.</inlineHelpText>
        <label>Event End Date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_eventLabel__c</fullName>
        <label>Event Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_eventOrder__c</fullName>
        <label>Event Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCPM_eventSMSFollowUpEndDate__c</fullName>
        <inlineHelpText>Please enter the date in &quot;YYYY-MM-DD HH:MM:SS&quot; format.</inlineHelpText>
        <label>Event SMS Follow Up End Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_eventSMSFollowUpStartDate__c</fullName>
        <inlineHelpText>Please enter the date in &quot;YYYY-MM-DD HH:MM:SS&quot; format.</inlineHelpText>
        <label>Event SMS Follow Up Start Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_eventStartDate__c</fullName>
        <inlineHelpText>This field is the text value of the field &apos;Event Start Date&apos; . Please enter the date in &quot;YYYY-MM-DD HH:MM:SS&quot; format.</inlineHelpText>
        <label>Event Start Date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_leadCustomerType__c</fullName>
        <label>Lead Customer Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_leadType__c</fullName>
        <label>Lead Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Abandoned Cart Digital</fullName>
                </value>
                <value>
                    <fullName>Customer Abandoned Cart Retail</fullName>
                </value>
                <value>
                    <fullName>Customer Abandoned Visit</fullName>
                </value>
                <value>
                    <fullName>Customer Quotes</fullName>
                </value>
                <value>
                    <fullName>Prospect Abandoned Cart Digital</fullName>
                </value>
                <value>
                    <fullName>Prospect Abandoned Cart Retail</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_recordTypeName__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_uniqueName__c</fullName>
        <label>Campaign Name</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>CCPM_allActiveCRMCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.CCPM_CRMCampaign</value>
        </filters>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active CRM Campaigns</label>
    </listViews>
    <listViews>
        <fullName>CCPM_allActiveEventTypes</fullName>
        <columns>CCPM_eventOrder__c</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CCPM_eventLabel__c</columns>
        <columns>CCPM_eventStartDate__c</columns>
        <columns>CCPM_eventEndDate__c</columns>
        <columns>CCPM_leadCustomerType__c</columns>
        <columns>CCPM_eventSMSFollowUpStartDate__c</columns>
        <columns>CCPM_eventSMSFollowUpEndDate__c</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.CCPM_EventCampaign</value>
        </filters>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Event Types</label>
    </listViews>
    <listViews>
        <fullName>CCPM_allActiveOtherLeadType</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CCPM_leadType__c</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.CCPM_otherLeadType</value>
        </filters>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Other Lead Type</label>
    </listViews>
    <recordTypes>
        <fullName>CCPM_CRMCampaign</fullName>
        <active>true</active>
        <label>CRM Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>CCPM_EventCampaign</fullName>
        <active>true</active>
        <label>Event Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>CCPM_otherLeadType</fullName>
        <active>true</active>
        <label>Other Lead Type</label>
    </recordTypes>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>